# introducao-polars

./: README.md  intro-polars.ipynb  introducao_polars.ipynb  lazy_api.py  pyproject.toml  read_csv.py
assets/: csv_exemplo.csv
