[tool.poetry]
name = "introducao-polars"
version = "0.0.1"
description = "Estudos de introdução ao Polars"
authors = ["Carlos Moreno <omorenodovale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.20.6"
notebook = "^7.0.8"
pyarrow = "^15.0.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
